# ibmdotcom-tutorials

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LINTING.md  Llama_stack.ipynb  PHASE_5_GLOBAL_REQUIREMENTS_PLAN.md  README.md  REORGANIZATION_SUMMARY.md  SECURITY_SCANNING.md  SETUP_SUMMARY.md  TEST_PRECOMMIT.md  docs_index.json  hooks.py  index.html  mkdocs.yml  multi-modal.ipynb  pyproject.toml  requirements-agents.txt  requirements-dev.txt  requirements-multiagent.txt  requirements-optional.txt  requirements-rag.txt  requirements.txt  setup-linting.py  sitemap.xml
.github/: dco.yml  pull_request_template.md
about/: index.html
ai-models/: gradient_boosting_classifier.ipynb
ai-stylist/: .env.example  README.md  ai-stylist-tutorial.ipynb  ai-stylist.py  requirements.txt
ai-stylist/src/: images.py
bob_files/: ADDING_TUTORIALS_GUIDE.md  ASSET_ORGANIZATION_ANALYSIS.md  ASSET_REORGANIZATION_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTERNAL_LINKS_TO_UPDATE.md  PHASE_5_ARCHITECTURE_DIAGRAM.md  PHASE_5_IMPLEMENTATION_COMPLETE.md  PHASE_5_IMPLEMENTATION_STRATEGY.md  PHASE_5_README_STRATEGY.md  REDIRECT_STRATEGY.md  REPOSITORY_REORGANIZATION_PLAN.md  REQUIREMENTS_MAINTENANCE.md  TUTORIAL_LINK_MIGRATION_PLAN.md  check_ibm_links.py  ibm_links_report.txt
coc/: index.html
contributing/: index.html
crew-ai-projects/: crewAI-multiagent-retail-example.md
crew-ai-projects/multiagent-collab-cs-call-center-analysis/: multiagent-collaboration-customer-call-analysis.md  qa_agent_serper_output.txt
docs/: about.md  coc.md  getting-started.md  index.md  projects-list.md  tutorials-list.md
docs/getting-started/: setup.md
docs/references/: contributing.md
docs/stylesheets/: style.css
docs/tutorials/projects/acp_tutorial/beeai_agent_server/: pyproject.toml
generative-ai/: Agentic-chunking.ipynb  Guardian_Risk Detection in Agents.ipynb  Prompt_Caching.ipynb  ReAct.ipynb  abstractive-text-summarization.ipynb  agent-architecture .ipynb  agent-architecture2 .ipynb  agentic-rag.ipynb  autoai-rag.ipynb  building-agentic-workflow.ipynb  deepseek_rag_reasoning_docling_watsonx.ipynb  docling_granite_question_answering.ipynb  function-calling.ipynb  granite-speech-3.3-8b.ipynb  granite-vision-v2.ipynb  graphrag.ipynb  human-in-the-loop-agent.ipynb  lag-llama.ipynb  langchain-rag.ipynb  langchain-tools.ipynb  langchain_tools_granite.ipynb  llamaindex_rag.ipynb  llm-agent-orchestration-2_2.ipynb  llm-guardrails.ipynb  multimodal-ai.ipynb  ollama_tools.ipynb  pixtral-multimodal-ai.ipynb  post-training-quantization.md  ppt-ai-analyzer-granite-vision.ipynb  prompt-chaining-langchain.ipynb  prompt-tuning.ipynb  rag-chunking-strategies.ipynb  rag-evaluation-ragas.ipynb  role-prompting-tutorial.ipynb  time-series-forecasting-lag-llama.ipynb  zero-shot-classification.ipynb
generative-ai/.ipynb_checkpoints/: agent-architecture -checkpoint.ipynb  agent-architecture-checkpoint.ipynb  agent-architecture2 -checkpoint.ipynb
generative-ai/ai-personal-trainer-llama/: ai-personal-trainer-llama.ipynb
generative-ai/bee-ai-multi-agent-contract-management/: bee-script.py  tutorial.md
generative-ai/bhagavad_gita_chatbot/: README.md  demo.py  requirements.txt
generative-ai/files/: File1.txt
generative-ai/silly_story_time/: package-lock.json  package.json  tsconfig.json  vite.config.ts
generative-ai/unit-test-with-wca/: pytest.py
generative-ai/wxo-text-classification/: wxo-text-classification.md
generative-ai/wxo_agentops/: env.template  wxo_agentops.md
getting-started/: index.html
getting-started/getting-started-setup/: index.html
getting-started/setup/: index.html
license/: index.html
multi-modal/: multi-modal.ipynb
projects-list/: index.html
react-agent-it-support/: README.md  config.toml.example  pyproject.toml  react-agent-tutorial.md
react-agent-it-support/tests/: test_tools.py
references/coc/: index.html
references/contributing/: index.html
references/license/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/about/: index.html
site/coc/: index.html
site/contributing/: index.html
site/getting-started/: index.html
site/license/: index.html
site/projects-list/: index.html
site/search/: search_index.json
site/stylesheets/: style.css
site/tutorials-list/: index.html
sql-agent-app/src/: database.py
stylesheets/: style.css
time-series/: tiny-time-mixer.ipynb
ttrpgai/: LICENSE  README.md  index.html  package-lock.json  package.json
ttrpgai/backend/: package-lock.json  package.json  tsconfig.json
ttrpgai/src/: App.tsx  main.tsx
tutorials-list/: index.html
tutorials/01-rag-and-retrieval/: README.md  agentic-rag.ipynb  graphrag.ipynb  langchain-rag.ipynb  rag-chunking-strategies.ipynb  rag-evaluation-ragas.ipynb  self_rag.ipynb
tutorials/02-agents-and-orchestration/: README.md  llm-agent-orchestration.ipynb
tutorials/03-multi-agent-systems/: README.md  crewAI-multiagent-retail-example.md  multiagent-collaboration-customer-call-analysis.md
tutorials/03-multi-agent-systems/multiagent-collab-cs-call-center-analysis/: pyproject.toml
tutorials/03-multi-agent-systems/multiagent-collab-cs-call-center-analysis/data/: transcript.txt
tutorials/03-multi-agent-systems/multiagent-collab-cs-call-center-analysis/src/customer_service_analyzer/: crew.py  main.py
tutorials/03-multi-agent-systems/multiagent-collab-cs-call-center-analysis/src/customer_service_analyzer/config/: tasks.yaml
tutorials/03-multi-agent-systems/my_retail_advisor/: .env_example  pyproject.toml  report.md
tutorials/03-multi-agent-systems/my_retail_advisor/src/my_retail_advisor/: auth.py  crew.py
tutorials/03-multi-agent-systems/my_retail_advisor/src/my_retail_advisor/config/: tasks.yaml
tutorials/03-multi-agent-systems/my_retail_advisor/src/my_retail_advisor/tools/: custom_tool.py  tool_helper.py
tutorials/04-prompt-engineering/: README.md  prompt-chaining-langchain.ipynb  prompt-tuning.ipynb  (+3 more)
(+446 files in other folders)
