[project]
name = "customer_service_analyzer"
version = "0.1.0"
description = "my-retail-advisor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
]

[project.scripts]
customer_service_analyzer = "customer_service_analyzer.main:run"
run_crew = "customer_service_analyzer.main:run"
train = "customer_service_analyzer.main:train"
replay = "customer_service_analyzer.main:replay"
test = "customer_service_analyzer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
