[project]
name = "my_retail_advisor"
version = "0.1.0"
description = "my-retail-advisor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
my_retail_advisor = "my_retail_advisor.main:run"
run_crew = "my_retail_advisor.main:run"
train = "my_retail_advisor.main:train"
replay = "my_retail_advisor.main:replay"
test = "my_retail_advisor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
