[project]
name = "acp-beeai-ar-agent"
version = "0.1.0"
description = "A BeeAI agent server for ACP-based multi-agent songwriting and A&R critique."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "acp-sdk==1.0.1",
    "beeai-framework==0.1.29",
    "pydantic-ai==0.2.14",
    "python-dotenv==1.0.1"  
]
